--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project mumbai</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -273,7 +273,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project delhi</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -289,7 +289,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project chennai</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -305,7 +305,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project kolkata</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
