--- a/project.html
+++ b/project.html
@@ -115,7 +115,7 @@
 						<div class="overlay-item"><i class="ti-link"></i></div>	
 						
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project mumbai</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -130,7 +130,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project delhi</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -146,7 +146,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project chennai</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -162,7 +162,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project kolkata</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -178,7 +178,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project jaipur</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -194,7 +194,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project shimla</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
