--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<div class="overlay-item"><i class="ti-link"></i></div>	
 						
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project jaipur</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
@@ -241,7 +241,7 @@
 							<i class="ti-link"></i>
 						</div>
 						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
+							<h3 class="mb-0 text-white">Project shimla</h3>
 							<p class="text-white-50">Web Development</p>
 						</div>
 					</a>
